added a socket to connect to python server, added internet permissions, minor style changes, added a result page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/CameraBtn"
         android:layout_width="296dp"
         android:layout_height="92dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +24,8 @@
         android:id="@+id/DroneBtn"
         android:layout_width="296dp"
         android:layout_height="92dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Drone"
         app:layout_constraintBottom_toTopOf="@+id/CameraBtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +37,8 @@
         android:id="@+id/HistBtn"
         android:layout_width="296dp"
         android:layout_height="92dp"
-        android:background="@color/colorAccent"
+        android:background = "@drawable/rounded_button"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="History"
         app:layout_constraintBottom_toTopOf="@+id/DroneBtn"
         app:layout_constraintEnd_toEndOf="parent"
