--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2FAE35</color>
-    <color name="colorPrimaryDark">#A0522D</color>
+    <color name="colorPrimary">#FF7CB342</color>
+    <color name="colorPrimaryDark">#FF905133</color>
     <color name="colorAccent">#DEB887</color>
-    <color name="colorBackground">#FF03A9F4</color>
+    <color name="colorBackground">#67B4BE</color>
 </resources>
